# data-ordinal

./: .gitignore  .vimrc  ChangeLog.md  README.md  TODO.md  ordinal.cabal
src/Data/: Ordinal.hs
src/Data/Ordinal/: Epsilon.hs  Expansion.hs  Finite.hs  Internal.hs  IsSome.hs  Kleene.hs  LPred.hs  Lens.hs  Minus.hs  NonNegative.hs  Notation.hs  Omega.hs  OmegaOmega.hs  Positive.hs  Pow.hs  QuotRem.hs  Show.hs  Zero.hs
src/Data/Ordinal/Epsilon/: Internal.hs
src/Data/Ordinal/Expansion/: Internal.hs  Private.hs
src/Data/Ordinal/Finite/: Internal.hs
src/Data/Ordinal/IsSome/: Internal.hs
src/Data/Ordinal/Kleene/: Internal.hs
src/Data/Ordinal/NonNegative/: Internal.hs
src/Data/Ordinal/Positive/: Internal.hs
test/Data/Ordinal/: EpsilonNegativeSpec.hs  EpsilonSpec.hs  ExpansionSpec.hs  NotationSpec.hs
test/Data/Ordinal/Epsilon/: SpecHelper.hs
