name:                data-ordinal
version:             0.1.0.0
synopsis:            ordinal numbers
-- description:         ordinal numbers
license:             PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
                  ,  README.md
cabal-version:       >=1.10

library
  exposed-modules: Data.Ordinal
                 , Data.Ordinal.Finite
                 , Data.Ordinal.Expansion
                 , Data.Ordinal.Expansion.Internal
                 , Data.Ordinal.Positive
                 , Data.Ordinal.Positive.Internal
                 , Data.Ordinal.NonNegative
                 , Data.Ordinal.NonNegative.Internal
                 , Data.Ordinal.Pow
                 , Data.Ordinal.LPred
  other-extensions: PatternSynonyms
                  , TupleSections
                  , LambdaCase
  build-depends:       base >=4.9 && <4.10
               ,       mtl >= 2.2.1 && < 2.3.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
