name:                data-ordinal
version:             0.1.0.0
synopsis:            ordinal numbers
-- description:         ordinal numbers
homepage:            http://github.com/rampion/data-ordinal
license:             PublicDomain
author:              Noah Luck Easterly
maintainer:          noah.easterly@gmail.com
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md
                  ,  README.md
cabal-version:       >=1.10

library
  exposed-modules: Data.Ordinal
                 , Data.Ordinal.Finite
                 , Data.Ordinal.Finite.Internal
                 , Data.Ordinal.Positive
                 , Data.Ordinal.Positive.Internal
                 , Data.Ordinal.Expansion
                 , Data.Ordinal.Expansion.Internal
                 , Data.Ordinal.Kleene
                 , Data.Ordinal.Kleene.Internal
                 , Data.Ordinal.Zero
                 , Data.Ordinal.Pow
                 , Data.Ordinal.Lens
                 , Data.Ordinal.LPred
                 , Data.Ordinal.Minus
                 , Data.Ordinal.Omega
                 , Data.Ordinal.OmegaOmega
                 , Data.Ordinal.Epsilon
                 , Data.Ordinal.Epsilon.Internal
  -- use a private module to break a cycle when defining Show instances
  other-modules: Data.Ordinal.Expansion.Private 
  other-extensions: ConstraintKinds
                  , DataKinds
                  , DeriveFunctor
                  , DeriveTraversable
                  , FlexibleInstances
                  , GADTs
                  , GeneralizedNewtypeDeriving
                  , IncoherentInstances
                  , InstanceSigs
                  , LambdaCase
                  , MultiParamTypeClasses
                  , PatternSynonyms
                  , RankNTypes
                  , ScopedTypeVariables
                  , TupleSections
                  , TypeFamilies
                  , TypeOperators
                  , ViewPatterns
  build-depends:       base >=4.9 && <4.10
               ,       mtl >= 2.2.1 && < 2.3.0.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  ghc-options: -Wall -Werror
  build-depends: base == 4.*
               , hspec == 2.*
               , HUnit >= 1.6 && <2.0
               , should-not-typecheck >=2.1 && <3.0
               , deepseq >= 1.4.2.0 && <2.0
               , data-ordinal
  other-modules: Data.Ordinal.EpsilonSpec
               , Data.Ordinal.EpsilonNegativeSpec
               , Data.Ordinal.Epsilon.SpecHelper
  default-language: Haskell2010 
